# learn_autoware

src/load_vehicle/: CMakeLists.txt  package.xml
src/load_vehicle/launch/: autoware.launch.xml  loadVehicle.launch.xml
src/load_vehicle/src/: param_pub.cpp
